# griptape-core

./: README.md  pyproject.toml
griptape/: __init__.py  base_adapter.py  base_executor.py  base_tool.py
griptape/adapters/: chatgpt_plugin_adapter.py  langchain_tool_adapter.py
griptape/core/: __init__.py  base_executor.py  base_tool.py  decorators.py
griptape/core/adapters/: chatgpt_plugin_adapter.py  langchain_tool_adapter.py
griptape/core/executors/: docker_executor.py  local_executor.py
griptape/executors/: docker_executor.py  local_executor.py
griptape/utils/: __init__.py
tests/mocks/invalid_mock_tool/: tool.py
tests/mocks/mock_tool/: tool.py
tests/unit/: test_base_tool.py
tests/unit/adapters/: test_langchain_plugin_adapter.py
